# hsarchetypes

./: .travis.yml  README.md  requirements.txt  requirements_extra.txt  setup.cfg  tox.ini
hsarchetypes/: __init__.py  classification.py  clustering.py  features.py  rules.py  signatures.py  utils.py
tests/: conftest.py  test_classification.py  test_clustering.py  test_features.py  test_main.py  test_rules.py  test_similarity.py  utils.py
visualization/: app.py  requirements.txt
visualization/templates/: index.html
