[metadata]
name = hsarchetypes
version = 0.1.0
description = Hearthstone Archetype Algorithms
author = Andrew Wilson
author_email = andrew@hearthsim.net
url = https://github.com/HearthSim/hsarchetypes
download_url = https://github.com/HearthSim/hsarchetypes/tarball/master
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Topic :: Games/Entertainment

[options]
packages = find:
zip_safe = True

[options.packages.find]
exclude =
	tests
